# xcp-ng-async-io

./: CMakeLists.txt
cmake/: FindLiburing.cmake
config/: XcpNgAsyncIoConfig.cmake.in
examples/: CMakeLists.txt  copy-file.c
include/xcp-ng/: async-io.h
include/xcp-ng/async-io/: io-global.h  io-queue.h  io-req.h
src/: io-queue.c
